--- a/react-dashboard/src/Header.css
+++ b/react-dashboard/src/Header.css
@@ -33,3 +33,12 @@
     font-weight: 400;
     color: #212529;
 }
+
+.login-link,
+.login-link:hover{
+    color: #677482;
+    font-size: 14px;
+    text-decoration: none;
+    text-align: left;
+    margin: 3px;
+}
