--- a/react-dashboard/src/Mypage.css
+++ b/react-dashboard/src/Mypage.css
@@ -26,12 +26,14 @@
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 7px;
+    text-align: left;
 }
 
 .menulist-menu{
     margin-left: 10px;
     margin-bottom: 3px;
     margin-top: 3px;
+    text-align: left;
 }
 
 .mypage-btn{
