0810 뒤로가기 버튼 및 기능 추가 -예은-

--- a/react-dashboard/src/Modify.css
+++ b/react-dashboard/src/Modify.css
@@ -44,6 +44,13 @@
     background-color: coral !important;
     border-color: coral !important;
 }
+.modify-back-btn{
+    width: 100%;
+    background-color: #fff !important;
+    color: coral !important;
+    border-color: coral !important;
+    margin-top : 5px;
+}
 
 .modify-input{
     height: 35px;
