--- a/react-dashboard/src/Mypage.css
+++ b/react-dashboard/src/Mypage.css
@@ -27,6 +27,7 @@
     font-weight: bold;
     margin-bottom: 7px;
     text-align: left;
+    /* color: #344767; */
 }
 
 .menulist-menu{
@@ -34,6 +35,7 @@
     margin-bottom: 3px;
     margin-top: 3px;
     text-align: left;
+    /* color: #344767; */
 }
 
 .mypage-btn{
