0810 생성한 페이지들 Footer 추가 -예은-

--- a/react-dashboard/src/Join.css
+++ b/react-dashboard/src/Join.css
@@ -11,6 +11,7 @@
     display: inline-block;
     padding: 20px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 .title-link,
 .title-link:hover{
