--- a/react-dashboard/src/Login.css
+++ b/react-dashboard/src/Login.css
@@ -11,6 +11,7 @@
     display: inline-block;
     padding: 20px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 .title-link,
 .title-link:hover{
