--- a/react-dashboard/src/Modify.css
+++ b/react-dashboard/src/Modify.css
@@ -48,7 +48,8 @@
 .modify-input{
     height: 35px;
     margin-bottom: 10px;
-    font-size: 14px;
+    font-size: 13px !important;
+    padding: 7px !important;
 }
 
 .modify-name-div{
