0816 옵션 탭 추가 -예은-

--- a/react-dashboard/src/components/dashboard/Tables.css
+++ b/react-dashboard/src/components/dashboard/Tables.css
@@ -3,6 +3,14 @@
     width: 12px;
 }
 
+.table-title-div{
+    display: flex;
+}
+
+.card-title-div{
+    width: 50%;
+}
+
 @media (max-width: 1025px) {
     .table-card{
         width: 100%;
