0822 수정본 _상현_

--- a/react-dashboard/src/components/dashboard/Tables.css
+++ b/react-dashboard/src/components/dashboard/Tables.css
@@ -26,3 +26,12 @@
         table-layout: fixed;
     }
 }
+.table-score{
+    min-width: 50px;
+}
+.table-tr{
+    height: 55px;
+}
+.table-table{
+    margin-top: 10px;
+}
